chore: [security]: Finish up wrapping event listeners and other small fixes, b=(no-bug), c=configs, common, compact-mode, split-view, tabs, workspaces

--- a/src/browser/themes/shared/zen-icons/icons.css
+++ b/src/browser/themes/shared/zen-icons/icons.css
@@ -168,10 +168,6 @@
   --menu-image: url('open.svg') !important;
 }
 
-#context_zenSetAsDefaultWorkspace {
-  --menu-image: url('bookmark-hollow.svg') !important;
-}
-
 #context_zenEditWorkspace,
 #zenToolbarThemePicker {
   --menu-image: url('edit-theme.svg') !important;
